// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend Component renders correctly 1`] = `
<div
  className="Legend"
>
  <Item
    fill="blue"
    key="0"
    label="label 1"
  />
  <Item
    key="1"
    label="label 2"
  />
  <Item
    fill="white"
    hasBorder={true}
    key="2"
    label="label 2"
  />
</div>
`;

exports[`Legend Component renders correctly 2`] = `
<div
  className="Item"
>
  <span
    className="Fill"
    style={
      Object {
        "background": "blue",
      }
    }
  />
  <span
    className="Label"
  >
    label 1
  </span>
</div>
`;

exports[`Legend Component renders correctly 3`] = `
<div
  className="Item"
>
  <span
    className="Fill"
    style={
      Object {
        "background": "whitesmoke",
      }
    }
  />
  <span
    className="Label"
  >
    label 2
  </span>
</div>
`;

exports[`Legend Component renders correctly 4`] = `
<div
  className="Item"
>
  <span
    className="Fill Border"
    style={
      Object {
        "background": "white",
      }
    }
  />
  <span
    className="Label"
  >
    label 2
  </span>
</div>
`;
